[gd_scene load_steps=3 format=3 uid="uid://o3apbi2w027n"]

[ext_resource type="Script" path="res://scenes/Options/options.gd" id="1_susqt"]
[ext_resource type="Texture2D" uid="uid://b5w4uhmpcoqg2" path="res://lib/aj.jpg" id="2_lxv0k"]

[node name="Options" type="Control" node_paths=PackedStringArray("name_entry")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_susqt")
name_entry = NodePath("HBoxContainer/LineEdit")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -476.0
offset_top = -499.0
offset_right = 330.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lxv0k")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="SetNameButton" type="Button" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Set Name
"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Exit
"

[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/SetNameButton" to="." method="_on_set_name_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
